Fixed hidden text on mobile.

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -32,6 +32,7 @@ body {
 
 main {
   display: block;
+  margin-bottom: 40px;
 }
 
 header{
@@ -203,7 +204,7 @@ margin: 5px 0;
   display:grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 10px;
-  margin: 0 10px;
+  margin: 0 10px 30px 10px;
 }
 .first_page_bottom_row_content{
   display:block;
@@ -225,12 +226,12 @@ margin: 5px 0;
   display: grid;
   grid-template-columns: auto auto;
   grid-gap: 10px;
-  margin: 0 5% 5% 5%;
+  margin: 0 10px 10px 10px;
 }
 .wrapper_single{
   display: grid;
   grid-template-columns: auto;
-  margin: 0 5% 5% 5%;
+  margin: 0 10px 10px 10px;
 }
 
 .wrapper_kontakt{
